# rust-backend-spawn

./: .gitignore  Cargo.toml  deploy.sh  docker-compose.yaml  dockerfile  haproxy.cfg  nginx.conf  readme.md
.cargo/: config.toml
src/: appstate.rs  constantes.rs  main.rs
src/api/: handler.rs  http.rs  mod.rs  nats.rs  redis.rs
src/models/: data_range.rs  mod.rs  payment.rs  processor.rs  summary.rs
src/workers/: consumer.rs  health_checker.rs  health_consumer.rs  mod.rs
