[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[dependencies]
async-nats = "0.42.0"
axum = "0.8.4"
chrono = {version = "0.4", features = ["serde"]}
console-subscriber = "0.4.1"
deadpool = "0.12.2"
deadpool-redis = "0.22.0"
futures = "0.3.31"
redis = {version = "0.32.4",features = ["json"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full","tracing"] }
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1",features = ["serde"]}

