[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[profile.release]
debug = false
opt-level = 3
lto = "fat"
strip = true
codegen-units = 4
panic = "abort"


[dependencies]
async-nats = "0.42.0"
axum = "0.8.4"
chrono = {version = "0.4", features = ["serde"]}
console-subscriber = "0.4.1"
deadpool = "0.12.2"
deadpool-redis = "0.22.0"
futures = "0.3.31"
jemallocator = "0.5.4"
redis = {version = "0.32.4",features = ["json"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls","http2"] }
rust_decimal = {version="1.37.2", features = ["serde-float"]}
rust_decimal_macros = "1.37.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full","tracing"] }
tower = {version="0.5", features = ["buffer", "limit"]}
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter","json"]}
uuid = {version = "1",features = ["serde"]}
tracing-appender = {version = "0.2"}
simd-json = "0.15.1"
serde_json_borrow = "0.8.0"
