[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-backend"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"


[dependencies]
async-nats = "0.42.0"
axum = "0.8.4"
chrono = {version = "0.4", features = ["serde"]}
deadpool = "0.12.2"
deadpool-redis = "0.22.0"
futures = "0.3.31"
jemallocator = "0.5.4"
redis = {version = "0.32.4",features = ["json"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls","http2"] }
rust_decimal = {version="1.37.2", features = ["serde-float"]}
rust_decimal_macros = "1.37.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1", features = ["net","rt-multi-thread","macros","sync","time","tracing"] }
tower = {version="0.5", features = ["buffer", "limit"]}
tower-http = "0.6"
uuid = {version = "1",features = ["serde"]}
simd-json = "0.15.1"